Azure-Network/subnet.tf
resource "azurerm_subnet" "subnet1" {
  name                 = "Subnet-1"
  resource_group_name  = azurerm_resource_group.rg.name
  virtual_network_name = azurerm_virtual_network.vnet.name
  address_prefixes     = ["10.123.1.0/24"]
}
resource "azurerm_subnet" "subnet2" {
  name                 = "Subnet-2"
  resource_group_name  = azurerm_resource_group.rg.name
  virtual_network_name = azurerm_virtual_network.vnet.name
  address_prefixes     = ["10.123.2.0/24"]
}
